--- a/healthmobile_web/src/main/webapp/pages/health-orderInfo.html
+++ b/healthmobile_web/src/main/webapp/pages/health-orderInfo.html
@@ -59,7 +59,7 @@
             <form class="input-group info-form">
                 <div class="input-row">
                     <label>体检人</label>
-                    <input type="text" class="input-clear" placeholder="请输入用户名">
+                    <input v-model="orderInfo.name" type="text" class="input-clear" placeholder="请输入用户名">
                 </div>
                 <div class="input-row single-radio">
                     <label class="radio-title">性别</label>
@@ -90,12 +90,12 @@
                 </div>
                 <div class="input-row">
                     <label>身份证号</label>
-                    <input type="text" class="input-clear" placeholder="请输入身份证号">
+                    <input v-model="orderInfo.idCard" type="text" class="input-clear" placeholder="请输入身份证号">
 
                 </div>
                 <div class="input-row">
                     <label>出生日期</label>
-                    <input type="text" class="input-clear" placeholder="请输入出生日期">
+                    <input v-model="orderInfo.birthday" type="text" class="input-clear" placeholder="请输入出生日期">
                 </div>
                 <div class="input-row single-radio">
                     <label class="radio-title">婚否</label>
@@ -121,7 +121,7 @@
                             align="right"
                             type="date"
                             placeholder="选择日期"
-                            :picker-options="pickerOptions">
+                    >
                     </el-date-picker>
                 </div>
 
@@ -185,7 +185,7 @@
         data: {
             setmeal: {},
             orderInfo: {
-                setmealtId: id,
+                setmealId: id,
                 sex: '1'
             }
         }, mounted() {
@@ -196,7 +196,6 @@
                 } else {
                     this.$message.error(res.data.message)
                 }
-
             })
         },
         methods: {
@@ -205,12 +204,10 @@
                 var telephone = this.orderInfo.telephone;
                 if (!checkTelephone(telephone)) {
                     this.$message.error("请输入正确手机号");
-                    //window.alert("请输入正确手机号");
                     return false;
                 }
                 validateCodeButton = $("#validateCodeButton")[0];
                 clock = window.setInterval(doLoop, 1000);
-                console.info("请输入验证码")
                 //异步发送验证码
                 axios.post("/validateCode/send4Order.do?number=" + telephone).then((res) => {
                     this.$message({
@@ -223,20 +220,35 @@
 
             //提交预约
             submitOrder() {
-                var order = this.orderInfo;
-                console.info(this.orderInfo.orderDate);
-                axios.post("/order/sumbit.do", order).then((res) => {
-                    this.$message({
-                        message: res.data.message,
-                        type: res.data.flag ? 'success' : "error"
-                    })
+                // this.orderInfo.orderDate = this.orderInfo.orderDate + 1;
+                if (!checkIdCard(this.orderInfo.idCard)) {
+                    this.$message.error("请输入正确身份证");
+                    return false;
+                }
+                axios.post("/order/sumbit.do", this.orderInfo).then((res) => {
+                    if (res.data.flag) {
+                        //预约成功，跳转到预约成功页面
+                        window.location.href = "/pages/health_orderSuccess.html?orderId=" + res.data.data.id;
+                    } else {
+                        //预约失败，提示预约失败信息
+                        this.$message.error(res.data.message);
+                    }
                 })
 
-            }//end submitOrder
+            },//
 
-
+            // 返回 类似 2016-01-02 格式的字符串
+            formatDate: function (year, month, day) {
+                var y = year;
+                var m = month;
+                if (m < 10) m = "0" + m;
+                var d = day;
+                if (d < 10) d = "0" + d;
+                return y + "-" + m + "-" + d
+            }
         }
     })
+
 
 </script>
 </body>
