--- a/healthmobile_web/src/main/webapp/pages/health-orderDetail.html
+++ b/healthmobile_web/src/main/webapp/pages/health-orderDetail.html
@@ -12,10 +12,17 @@
     <link rel="icon" href="../img/asset-favico.ico">
     <title>预约详情</title>
 
-    <link rel="stylesheet" href="../css/page-health-orderDetail.css"/>
-    <script src="../plugins/vue/axios-0.18.0.js"></script>
+    <link rel="stylesheet" href="../plugins/elementui/index.css"/>  <!--少了这个-->
+
+    <script src="../plugins/jquery/dist/jquery.min.js"></script>
+    <script src="../plugins/datapicker/datePicker.js"></script>  <!--少了这个-->
     <script src="../plugins/vue/vue.js"></script>
+    <script src="../plugins/vue/axios-0.18.0.js"></script>
+    <script src="../plugins/elementui/index.js"></script>       <!--少了这个-->
+    <link rel="stylesheet" href="../css/page-health-orderDetail.css"/>
     <script src="../plugins/healthmobile.js"></script>
+
+
 </head>
 
 <body data-spy="scroll" data-target="#myNavbar" data-offset="150">
