--- a/healthmobile_web/src/main/webapp/pages/health-index.html
+++ b/healthmobile_web/src/main/webapp/pages/health-index.html
@@ -37,7 +37,7 @@
             <div class="list-column2">
                 <ul class="list">
                     <li class="type-item">
-                        <a href="health-order.html" class="link-page">
+                        <a href="m_setmeal.html" class="link-page">
                             <div class="type-title">
                                 <h3>体检预约</h3>
                                 <p>实时预约</p>
